--- a/codepipeline.yaml
+++ b/codepipeline.yaml
@@ -7,7 +7,7 @@ Parameters:
 
   GitHubOwner:
     Type: String
-    Default: shrestha-ajay #replace with your github username
+    Default: Chetan-chhetri #replace with your github username
     AllowedPattern: "[A-Za-z0-9-]+"
 
   RepositoryName:
